# UNet-Segmentation-for-Waterlogged-Barley

./: README.md  pyproject.toml  test_presegmentation.ipynb  unet-segmentation.ipynb
.ipynb_checkpoints/: test_presegmentation-checkpoint.ipynb
