[tool.poetry]
name = "hyperspec-segment"
version = "0.1.0"
description = ""
authors = ["JoshKing56 <joshuaiking56@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spectral = "^0.22.2"
keras = "^2.4.3"
tensorflow = "^2.5.0"
torch = "^1.9.0"
torchvision = "^0.10.0"
sklearn = "^0.0"
matplotlib = "^3.5.1"
plantcv = "^3.13.4"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = {version = "^21.6b0", allow-prereleases = true}
jupyter = "^1.0.0"
ipykernel = "^6.5.0"
jupyterlab = "^3.2.4"
plantcv = "^3.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
